--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,7 @@ prefer-final = false
 newest = false
 download-cache = .cache
 develop = .
-parts = 
+parts =
 
 [project]
 name = infi.django_postgresql_migrations
@@ -23,7 +23,7 @@ pre_uninstall_script_name = None
 
 [isolated-python]
 recipe = infi.recipe.python
-version = v2.7.8.3
+version = v2.7.8.5
 
 [setup.py]
 recipe = infi.recipe.template.version
@@ -43,6 +43,8 @@ eggs = ${project:name}
 	infi.unittest
 	infi.traceback
 	zc.buildout
+    Django==1.8.3
+    psycopg2
 interpreter = python
 
 [pack]
